[API] Run the server with mvn exec:exec
It's a little less work than `mvn package && java -jar target/colorado_rla-x.y.z.-shared.jar`